plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
}

javafx {
    version = "12"
    modules = ['javafx.controls']
}

group 'com.lxf'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.squareup.okio', name: 'okio', version: '2.4.1'
    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.3.2'
    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-javafx', version: '1.3.2'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

application {
//    applicationDefaultJvmArgs =  [
//            "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
//            "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
//            "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
//            "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
//            "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
//            "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
//            "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
//            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
//            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls"
//    ]
    mainClassName = 'com.lxf.Main'
}
//ext.moduleName = "cn.izis.YzGoPlatform"
//mainClassName = "$moduleName/cn.izis.controller.Login"
//
//run {
//    inputs.property("moduleName", moduleName)
//    doFirst {
////        println "类路径：${classpath.asPath}"
//        println "--patch-module：$moduleName=" + files(sourceSets.main.resources.srcDirs).asPath
//        jvmArgs = [
//                '--module-path', classpath.asPath,
//                '--patch-module', "$moduleName="
//                        + files(sourceSets.main.resources.srcDirs).asPath,
////                '--add-opens', "javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
//                '--module', mainClassName
//        ]
//        classpath = files()
//        println jvmArgs
//        println applicationDefaultJvmArgs
//        println allJvmArgs
//    }
//}

jar{

    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    manifest {
        attributes 'Main-Class': 'com.lxf.Main',
                'Add-Opens': 'javafx.controls/javafx.scene.control.skin'
    }
}
compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}